<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.babakmhz.servianchallenge.AlbumFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_album"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:id="@+id/txt_header"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/album_id_d" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcl_album"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="LinearLayoutManager"
        tools:context=".ui.base.main.AlbumFragment"
        tools:listitem="@layout/fragment_album" />
</LinearLayout>